# esp-nimble-component

./: .gitmodules  CMakeLists.txt  Kconfig  Kconfig.projbuild  README.md  component.mk
.github/workflows/: build_examples.yaml
applied_patches/official-merged/: nimble#730.patch  nimble#790.patch  nimble#802.patch  nimble#804.patch
applied_patches/unmerged/: esp-nimble#7.patch
esp-hci/src/: esp_nimble_hci.c
host/nimble/: Kconfig.in
host/nimble/esp-hci/src/: esp_nimble_hci.c
host/nimble/nimble/: .gitignore  create_arduino.py
host/nimble/nimble/nimble/controller/src/: ble_ll_adv.c  ble_ll_ctrl.c  ble_ll_rfmgmt.c  ble_ll_scan_aux.c
host/nimble/nimble/nimble/drivers/nrf51/: pkg.yml
host/nimble/nimble/nimble/drivers/nrf5x/src/: ble_phy.c  phy_priv.h
host/nimble/nimble/nimble/host/audio/test/src/: ble_audio_test.c
host/nimble/nimble/nimble/host/include/host/: ble_aes_ccm.h  ble_ead.h  ble_hs_pvcy.h  ble_store.h
host/nimble/nimble/nimble/host/services/cte/: pkg.yml  syscfg.yml
host/nimble/nimble/nimble/host/services/cte/include/services/cte/: ble_svc_cte.h
host/nimble/nimble/nimble/host/services/cte/src/: ble_svc_cte.c
host/nimble/nimble/nimble/host/services/cts/include/services/cts/: ble_svc_cts.h
host/nimble/nimble/nimble/host/services/cts/src/: ble_svc_cts.c
host/nimble/nimble/nimble/host/services/hid/include/services/hid/: ble_svc_hid.h
host/nimble/nimble/nimble/host/services/hid/src/: ble_svc_hid.c
host/nimble/nimble/nimble/host/services/hr/include/services/hr/: ble_svc_hr.h
host/nimble/nimble/nimble/host/services/hr/src/: ble_svc_hr.c
host/nimble/nimble/nimble/host/services/htp/include/services/htp/: ble_svc_htp.h
host/nimble/nimble/nimble/host/services/htp/src/: ble_svc_htp.c
host/nimble/nimble/nimble/host/services/prox/include/services/prox/: ble_svc_prox.h
host/nimble/nimble/nimble/host/services/prox/src/: ble_svc_prox.c
host/nimble/nimble/nimble/host/services/sps/include/services/sps/: ble_svc_sps.h
host/nimble/nimble/nimble/host/services/sps/src/: ble_svc_sps.c
host/nimble/nimble/nimble/host/src/: ble_aes_ccm.c  ble_att_priv.h  ble_att_svr.c  ble_ead.c  ble_gap.c  ble_gattc_cache.c  ble_gattc_cache_conn.c  ble_gattc_cache_priv.h  ble_gatts.c  ble_hs.c  ble_hs_conn.c  ble_hs_hci.c  ble_hs_hci_cmd.c  ble_hs_hci_evt.c  ble_hs_id.c  ble_hs_log.c  ble_hs_mbuf.c  ble_hs_pvcy.c  ble_hs_resolv.c  ble_hs_stop.c  ble_sm.c  ble_sm_alg.c  ble_sm_priv.h  ble_store.c  ble_store_util.c
host/nimble/nimble/nimble/host/store/config/src/: ble_store_config.c  ble_store_nvs.c
host/nimble/nimble/nimble/include/nimble/: nimble_npl.h  nimble_npl_log.h
host/nimble/nimble/nimble/transport/esp_ipc/src/: hci_esp_ipc.c
host/nimble/nimble/nimble/transport/esp_ipc_legacy/src/: hci_esp_ipc_legacy.c
host/nimble/nimble/nimble/transport/include/nimble/: transport.h
host/nimble/nimble/nimble/transport/src/: transport.c
host/nimble/nimble/porting/nimble/include/mem/: mem.h
host/nimble/nimble/porting/nimble/include/nimble/: nimble_port.h
host/nimble/nimble/porting/nimble/include/os/: os_mempool.h
host/nimble/nimble/porting/nimble/include/syscfg/: syscfg.h
host/nimble/nimble/porting/nimble/src/: nimble_port.c  os_mempool.c  os_msys.c  os_msys_init.c
host/nimble/nimble/porting/npl/freertos/include/nimble/: nimble_npl_os_log.h  nimble_port_freertos.h
host/nimble/nimble/porting/npl/freertos/src/: npl_os_freertos.c
host/nimble/port/include/: esp_nimble_cfg.h
nimble/host/: syscfg.yml
nimble/host/include/host/: ble_att.h  ble_esp_gap.h  ble_gap.h  ble_gatt.h  ble_hs_pvcy.h  ble_store.h
nimble/host/mesh/include/mesh/: glue.h
nimble/host/mesh/src/: adv.c  crypto.c  glue.c
nimble/host/services/cts/src/: ble_svc_cts.c
nimble/host/services/gap/include/services/gap/: ble_svc_gap.h
nimble/host/services/gatt/include/services/gatt/: ble_svc_gatt.h
nimble/host/services/hid/src/: ble_svc_hid.c
nimble/host/src/: ble_att.c  ble_att_clt.c  ble_att_priv.h  ble_att_svr.c  ble_gap.c  ble_gap_priv.h  ble_gatt_priv.h  ble_gattc.c  ble_gatts.c  ble_hs.c  ble_hs_conn.c  ble_hs_flow.c  ble_hs_hci.c  ble_hs_hci_cmd.c  ble_hs_hci_evt.c  ble_hs_hci_util.c  ble_hs_id.c  ble_hs_mbuf.c  ble_hs_periodic_sync.c  ble_hs_priv.h  ble_hs_pvcy.c  ble_hs_resolv.c  ble_hs_startup.c  ble_sm.c  ble_sm_alg.c  ble_sm_priv.h  ble_store.c  ble_store_util.c
nimble/host/store/config/src/: ble_store_config.c  ble_store_config_priv.h  ble_store_nvs.c
nimble/host/store/ram/src/: ble_store_ram.c
nimble/host/test/src/: ble_att_clt_test.c
nimble/host/util/src/: addr.c
nimble/include/nimble/: hci_common.h  nimble_npl.h  nimble_opt_auto.h
nimble/nimble/host/mesh/src/: glue.c
nimble/nimble/host/src/: ble_gap.c  ble_hs_hci_evt.c  ble_sm_alg.c
nimble/porting/nimble/include/modlog/: modlog.h
nimble/porting/npl/freertos/src/: npl_os_freertos.c
nimble/transport/src/: monitor.c  transport.c
porting/examples/linux/include/syscfg/: syscfg.h
porting/examples/linux_blemesh/include/syscfg/: syscfg.h
porting/examples/nuttx/include/syscfg/: syscfg.h
porting/nimble/include/logcfg/: logcfg.h
porting/nimble/include/mem/: mem.h
porting/nimble/include/modlog/: modlog.h
porting/nimble/include/nimble/: nimble_port.h
porting/nimble/include/os/: endian.h  os_mbuf.h  os_mempool.h  queue.h
porting/nimble/include/syscfg/: syscfg.h
porting/nimble/src/: hal_uart.c  mem.c  nimble_port.c  os_mbuf.c  os_mempool.c  os_msys_init.c
porting/npl/freertos/include/nimble/: nimble_npl_os.h  nimble_port_freertos.h
porting/npl/freertos/src/: nimble_port_freertos.c  npl_os_freertos.c
porting/npl/riot/include/syscfg/: syscfg.h
